ingress-demo.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 8080
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 8080
---
